<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/relative_layout_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"

    >

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-medium"
        android:text="@string/title"
        android:textColor="@color/purple_700"
        android:textSize="24sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_things_to_do"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/image_things_to_do"
                android:scaleType="centerCrop"
                android:src="@drawable/glenn_carstens_peters_rlw_uc03gwc_unsplash" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/things_to_do"
                android:textSize="18sp"

                />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_places_to_go"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_view_things_to_do"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/image_places_to_go"
                android:scaleType="centerCrop"
                android:src="@drawable/takashi_miyazaki_64ajtpezlyc_unsplash" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/places_to_go"
                android:textSize="18sp"

                />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>